# Vulnerable-file-reader-server

./: MCP-ShellGuard-README.md  github_scanner.py  local_scanner.py  main.py  main_scanner.py  pyproject.toml  scanner_base.py
