[project]
name = "Vulnerable-file-reader-server"
version = "0.1.0"
description = "File reader server with MCP integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]==1.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicitly specify which files to include in the build
[tool.hatch.build.targets.wheel]
packages = ["."]